aggiunta scrollbar fixed

--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,24 @@
 
 body{
   font-family: 'Rubik Mono One', sans-serif;
+  background-color: red;
 }
 
 header{
   text-align:right;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 .menu{
-  background-color: red;
+  background-color: transparent;
 }
 
 .menu li{
   display: inline-block;
   margin: 10px;
-  padding: 10px;
+  padding: 15px;
   background-color: white;
   border-radius: 50%;
   font-size: 12px;
@@ -36,8 +40,6 @@ section{
 
 #sezione1{
   background-color: red;
-  position: relative;
-
 }
 
 #sezione2{
